--- a/XSLTSampleApp/XSLTSampleApp/XSLTSampleApp.csproj
+++ b/XSLTSampleApp/XSLTSampleApp/XSLTSampleApp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A4DC2900-14C6-4252-A39A-8632B62FF6C7}</ProjectGuid>
+    <ProjectGuid>{8577BB5D-F8BE-41ED-9FB6-9A03E9439094}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WPFValidatingReader</RootNamespace>
-    <AssemblyName>WPFValidatingReader</AssemblyName>
+    <RootNamespace>XSLTSampleApp</RootNamespace>
+    <AssemblyName>XSLTSampleApp</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -86,26 +86,23 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="AuthorsSchema.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="BooksSchema.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="PublisherSchema.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="WroxBooks.xml" />
+    <Resource Include="Catalog.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="TransformDemo1.xslt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="XSLTFile1.xslt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
